# edsnlp

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  =7.1.0  Benchmark_Search_Strings.md  CITATION.cff  Dockerfile.ci  LICENSE  Makefile  README.md  build-constraints.txt  changelog.md  changelog_unreleased.md  comparison.md  contributing.md  coverage.txt  demo.py  generate_pipeline.py  mkdocs.yml  problems detected and propositions of upgrades.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-setup.txt  requirements-tests.txt  requirements.txt  setup.py  versions.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: delete-preview-docs.yml  documentation.yml  package.yml  prepare-release.yml  release-from-pr.yml  release.yml  test-build.yml  tests.yml  trusted-pr-controller.yml
0.4.0/: objects.inv  sitemap.xml
0.4.0/contributing/: index.html
0.4.0/reference/: index.html
NER_model/: dvc.yaml  evaluate.md  project.yml  pyproject.toml
NER_model/configs/: config.cfg  config_v1.cfg
NER_model/configs/expe_lang_model/: config_DrBert.cfg  config_camembert_base.cfg  config_camembert_bio.cfg  config_eds_scratch.cfg
NER_model/configs/rebus/: __.cfg  config.cfg  config_1907.cfg  config_backup2.cfg  config_j.cfg
NER_model/data/NLP_diabeto/clean/: kb_shortcuts.conf  visual.conf
NER_model/data/NLP_diabeto/raw/: annotation.conf
NER_model/scripts/: convert.py  evaluate.py  infer.py  new_evaluate.py  package.py  save_to_brat.py
Normalisation/drugs/: exception.py  normalisation.py
Normalisation/extract_measurement/: config.py  extract_measurements_from_brat.py  extract_pandas_from_brat.py  main.py  measurements_patterns.py
Normalisation/inference/: config.py  extract_pandas_from_brat.py  get_normalization_with_coder.py  main.py  text_preprocessor.py
Normalisation/training/: data_util.py  extract_bert.py  generate_term_embeddings.py  generate_term_embeddings.sh  generate_term_embeddings_coder_eds.py  generate_term_embeddings_coder_eds.sh  generate_term_embeddings_coder_eds_cased.py  generate_term_embeddings_coder_eds_cased.sh  generate_umls_embeddings.py  generate_umls_embeddings.sh  generate_umls_normalized_embeddings.py  generate_umls_normalized_embeddings.sh  generate_umls_normalized_embeddings_coder_eds.py  generate_umls_normalized_embeddings_coder_eds.sh  generate_umls_normalized_embeddings_coder_eds_cased.py  generate_umls_normalized_embeddings_coder_eds_cased.sh  get_matches.py  get_matches.sh  load_umls.py  load_umls_normalized.py  loss.py  model.py  sampler_util.py  train.py  train_coder_slurm.cfg  trans.py
bash_scripts/NER_model/: expe_data_size.sh  expe_hyperparams.sh  expe_model_lang.sh  infer.sh  save.sh  test.sh  train.sh  train_v1.sh
bash_scripts/Normalisation/: extract_measurement.sh  infer_coder.sh  infer_coder_quaero.sh  train_coder.sh
demo/: app.py  index.html  requirements.txt
dev/: index.html  objects.inv
dev/changelog/: index.html
dev/search/: search_index.json
docs/: conf.py  index.md  index.rst  languages.md  references.bib  tokenizers.md
docs/additional/: contributing.md
docs/advanced-tutorials/: fastapi.md  (+3 more)
edsnlp/: Makefile  __init__.py  _version.py  accents.py  changelog.md  components.py  conjugator.py  evaluate.py  extensions.py  language.py  mkdocs.yml  optimization.py  package.py  patch_spacy.py  patch_spacy_dot_components.py  processing.py  pyproject.toml  reducers.py  setup.py  train.py  tune.py
edsnlp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
epita/: 404.html  index.html  objects.inv  sitemap.xml
latest/: 404.html  cards.css  index.html  objects.inv  sitemap.xml
master/: 404.html  clickable-code.css  generate_development.py  generate_reference.py  index.html  objects.inv  override.css  pret.css  references.bib  sitemap.xml
nlptools/: __init__.py  accents.py  components.py  processing.py
notebooks/: README.md  context.py  export_pandas_to_brat.py  get_stats_by_section_on_cim10.md  knowledge.py  pipeline.md  premier-pipeline.md  prototyping.md  test_competition copy.md  test_flashtext.md  test_flashtext2.md  test_simstring.md
scripts/: adicap.py  cim10.py  config.cfg  conjugate.py  conjugate_verbs.py  demo.py  download_cities.py  install.sh  prepare_release.py  serve.py  test_edstoolbox_spark.py
tests/: conftest.py  context.py  examples.py  extract_docs_code.py  helpers.py  readme.md  test_conjugator.py  test_docs.py  test_entrypoints.py  test_language.py  test_metrics.py  test_pipeline.py  test_pollution.py  test_processing.py  test_reducers.py  test_scorers.py  test_sections.py  test_sentences.py  test_span_args.py
v0.10.0/: 404.html
v0.10.0beta1/: 404.html  index.html  objects.inv  references.bib
v0.10.1/: index.html  objects.inv
v0.10.3/: index.html
v0.10.4/: index.html  objects.inv
v0.10.7/: index.html  objects.inv
v0.11.0/: index.html  objects.inv  references.bib
v0.11.1/: index.html
v0.12.1/: index.html  objects.inv
v0.12.2/: index.html
v0.13.0/: index.html
v0.14.0/: 404.html  objects.inv
v0.15.0/: 404.html
v0.16.0/: objects.inv
v0.17.1/: index.html
v0.17.2/: index.html  objects.inv
v0.18.0/: 404.html  index.html  objects.inv
v0.19.0/: index.html
v0.21.0/: 404.html  objects.inv
v0.4.0/: 404.html  objects.inv
v0.4.1/: objects.inv  sitemap.xml
v0.4.2/: index.html
v0.4.3/: 404.html  index.html  sitemap.xml
v0.4.4/: index.html  objects.inv
v0.5.0/: 404.html  index.html  sitemap.xml
v0.5.1/: index.html  objects.inv  sitemap.xml
v0.5.3/: 404.html  index.html  sitemap.xml
v0.6.0/: 404.html  objects.inv
v0.6.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.6.2/: objects.inv  sitemap.xml
v0.7.0/: index.html  objects.inv  references.bib  sitemap.xml
v0.7.1/: 404.html  objects.inv
v0.7.2/: 404.html  sitemap.xml
v0.7.3/: 404.html  references.bib  sitemap.xml
v0.8.0/: index.html  objects.inv
v0.8.1/: 404.html  index.html
v0.9.0/: objects.inv
v0.9.1/: 404.html
(+10421 files in other folders)
